--- a/recept.html
+++ b/recept.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>Enkelt recept på pannkakor</title>
-</head>
-<body>
-    
+    <link rel="stylesheet" href="recept.css" />
+  </head>
+  <body>
+    <div class="flex-container" id="article">
+      <img src="pannkakor1.png" alt="pannkakor" id="pannkakor1"/>
 
-    <h1>Enkelt recept på pannkakor</h1>
-    <div>
+      <div class="flex-container" id="content">
+        <h1 id="main_header">Enkelt recept på pannkakor</h1>
+        <div id="subheader">
+          <p>
+            Gör traditionella tunna pannkakor med detta enkla och goda
+            pannkaksrecept.
+          </p>
+        </div>
 
+        <div>
+          <h2>Ingredienser (4 port)</h2>
+          <ul>
+            <li>2 1/2 dl vetemjöl</li>
+            <li>1/2 tsk salt</li>
+            <li>6 dl mjölk</li>
+            <li>smör (till stekning)</li>
+            <li>sykt, bär eller frukt till servering</li>
+          </ul>
+        </div>
+
+        <div>
+          <h2>Så här gör du</h2>
+          <ol>
+            <li>Blanda mjöl och salt i en bunke.</li>
+            <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+            <li>Vispa i resten av mjölken och äggen.</li>
+            <li>Låt smeten vila ca 10 minuter.</li>
+            <li>
+              Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek-
+              eller pannkakspanna.
+            </li>
+            <li>Servera med sylt, bär eller frukt.</li>
+          </ol>
+        </div>
+
+        <div>
+          <h2>Serveringförslag</h2>
+          <div class="flex-container" id="servering">
+            <img
+              src="pannkakor2.png"
+              href="serveringsförslag 1"
+              style="width: 100%; height: 100%"
+              class="servering_img"
+            />
+            <img
+              src="pannkakor3.png"
+              href="serveringsförslag 2"
+              style="width: 100%; height: 100%"
+              class="servering_img"
+            />
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
