added Open Sans font

--- a/recept.html
+++ b/recept.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Enkelt recept på pannkakor</title>
     <link rel="stylesheet" href="recept.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
   </head>
   <body>
     <div class="flex-container" id="article">
